fixed new bug: clicking wasn't working so changed z-index of map to 0, added z-index 1 to header

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
     "bar";
   position: fixed;
   background-color: white;
+    z-index: 1;
 }
 
 .main-nav {
@@ -42,7 +43,7 @@ a {
     padding-bottom: 100%;
     vertical-align: top;
     overflow: hidden;
-    z-index: -1;
+    z-index: 0;
 }
 
 .svg-content {
